[package]
name = "rust-assistant"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { workspace = true, features = ["derive", "rc"] }
lru = "0.12.1"
tokio = { workspace = true, features = ["full"] }
reqwest = { version = "0.11.23", features = ["rustls-tls", "json"], default-features = false }
syn = { version = "2.0.48", features = ["full", "visit"] }
proc-macro2 = {  version = "1.0.76", features = ["span-locations"] }
tar = "0.4.40"
flate2 = "1.0.28"
anyhow.workspace = true
bytes = "1.5.0"
parking_lot = "0.12.1"
fnv = "1.0.7"

axum = { workspace = true, optional = true}
axum-extra = { workspace = true, features = ["typed-header"], optional = true}
utoipa = { version = "4.2.0", features = ["axum_extras"], optional = true }
utoipa-swagger-ui = { version = "6.0.0", features = ["axum"], optional = true }
quote = "1.0.35"
regex = "1.10.2"

[features]
axum = ["dep:axum", "dep:axum-extra", "utoipa-swagger-ui/axum"]
utoipa = ["dep:utoipa", "dep:utoipa-swagger-ui"]

