[package]
name = "rust-assistant"
version = "0.3.0"
description = "Rust Assistant Library."
authors = ["GengTeng <me@gteng.org>"]
license = "GPL-3.0"
homepage = "https://rustassistant.com"
repository = "https://github.com/gengteng/rust-assistant"
documentation = "https://docs.rs/rust-assistant"
keywords = [
    "rust",
    "assistant",
    "GPTs",
    "chatgpt",
]
edition = "2021"

[dependencies]
serde = { workspace = true, features = ["derive", "rc"] }
serde_json.workspace = true
lru = "0.12.1"
tokio = { workspace = true, features = ["full"] }
reqwest = { version = "0.12.4", features = ["rustls-tls", "json"], default-features = false }
syn = { version = "2.0.48", features = ["full", "visit"] }
proc-macro2 = { version = "1.0.76", features = ["span-locations"] }
tar = "0.4.40"
flate2 = "1.0.28"
anyhow.workspace = true
bytes = "1.5.0"
parking_lot = "0.12.1"
fnv = "1.0.7"

axum = { workspace = true, optional = true }
axum-extra = { workspace = true, features = ["typed-header"], optional = true }
utoipa = { version = "4.2.0", features = ["axum_extras"], optional = true }
utoipa-swagger-ui = { version = "7.1.0", features = ["axum"], optional = true }
quote = "1.0.35"
regex = "1.10.2"
base64 = "0.22.1"

[dev-dependencies]
dotenv = "0.15.0"

[features]
axum = ["dep:axum", "dep:axum-extra", "utoipa-swagger-ui/axum"]
utoipa = ["dep:utoipa", "dep:utoipa-swagger-ui"]

